--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"private": true,
 	"scripts": {
 		"start": "react-scripts start",
-    "server": "nodemon server.js",
+		"server": "nodemon server.js",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
 	"dependencies": {
+		"body-parser": "^1.20.0",
 		"bootstrap": "^5.1.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
