--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
+    "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-papaparse": "^4.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "request": "^2.88.2",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@webpack-cli/generators": "^2.4.2",
     "husky": "^7.0.4",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
