--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "mdbreact": "^5.2.0",
     "mongoose": "^6.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
