--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "mapbox-gl": "^2.8.2",
     "mdbreact": "^5.2.0",
     "mongoose": "^6.3.1",
+    "node-fetch": "^2.6.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-papaparse": "^4.0.2",
